  * change upstream location.
  * revert (unreleased) patches contributed by other copyright holders under 
    the pretense of GPL v3+, until they can get asked about their licensing
    choice - even if one-liners are probably not copyrightable.
  * add myself to uploaders.
  * drop dependency on bash >= 2.05, even woody had it.
  * xrandr has moved from xbase-clients to x11-xserver-utils.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 09 Nov 2008 18:10:16 +0100

infobash (3.02) unstable; urgency=low

  * Filter out unwanted content from xrandr output when detecting screen
    resolution, not all output are equal.

 -- Kel Modderman <kel@otaku42.de>  Sat, 21 Jun 2008 12:35:58 +1000

infobash (3.01) unstable; urgency=low

  * Implemented bc removal patch by slh
  * Took over maintainership from slh
  * Removed coreutils from dependency list, as coreutils is essential
  * Added error handler for bc missing when konversation is used.

 -- Michiel de Boer <locsmif@sidux.com>  Wed, 28 Nov 2007 00:03:03 +0100

infobash (3.00) unstable; urgency=low

  * don't add a bogus dependency on bc, it's just useless bloat.
  * change debian/copyright to use GPL3.
  * remove myself as maintainer.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 22 Nov 2007 21:01:11 +0100

infobash (2.68) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * add VCS control headers.
  * update syntax for Vcs headers in debian/control
  * drop Recommends to Suggests.

  [ Michiel de Boer ]
  * Version bump to 3.00
  * Updated to GPLv3
  * Rewrite of distro detection
  * Added distro version file corruption detection due to possible corruptions
    by other tools or user modifications. Will reject anything larger than 80
    characters, and is overridable with --crap
  * Added interactive license display with --version, to conform to GPLv3
    better
  * Complete overhaul and improvements of code style, indenting
  * Rewrite of CPU flags detection