@@ -3,7 +3,7 @@ Section: admin
 Priority: extra
 Maintainer: Michiel de Boer <ltown2@web.de>
 Uploaders: Stefan Lippers-Hollmann <s.l-h@gmx.de>
-Build-Depends: cdbs, debhelper (>= 5), xsltproc, docbook-xsl
+Build-Depends: debhelper (>= 7), xsltproc, docbook-xsl
 Standards-Version: 3.7.2
 Vcs-Svn: svn://svn.berlios.de/fullstory/infobash/trunk
 Vcs-Browser: http://svn.berlios.de/wsvn/fullstory/infobash/trunk/
