@@ -1,11 +1,11 @@
 #!/usr/bin/make -f
 
-include /usr/share/cdbs/1/rules/debhelper.mk
-
-build/infobash::
+build:
 	xsltproc -o infobash.1 /usr/share/xml/docbook/stylesheet/nwalsh/manpages/docbook.xsl infobash.sgml
 	test -s infobash.1
 
-clean::
-	-rm -f infobash.1
+clean:
+	rm -f infobash.1
 
+%:
+	dh $@
